AUT-104: fixed issue with passing debug port to RVM